update to threshold

--- a/np-os-ons.ipynb
+++ b/np-os-ons.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -196,6 +196,13 @@
       "The Broads            6499.068338\n",
       "Yorkshire Dales      22953.815851\n",
       "Name: pop_in_threshold, dtype: float64\n",
+      "Columns in oa_gdf after merge: Index(['OA21CD', 'LSOA21CD', 'LSOA21NM', 'LSOA21NMW', 'BNG_E', 'BNG_N', 'LAT',\n",
+      "       'LONG', 'GlobalID', 'index_righ', 'CODE', 'NAME', 'MEASURE',\n",
+      "       'DESIG_DATE', 'HOTLINK', 'STATUS', 'National_P', 'Park_Popul',\n",
+      "       'address_in', 'total_addr', 'address_ou', 'OA_Populat', 'pop_per_ad',\n",
+      "       'pop_inside', 'pop_outsid', 'geometry', 'pop_in_threshold'],\n",
+      "      dtype='object')\n",
+      "Included OAs saved to 'included_oas.csv'.\n",
       "Final Result:\n",
       "      National park  2021 total  pop_in_threshold  difference\n",
       "0          Dartmoor     34124.0      34095.765318   28.234682\n",
@@ -309,6 +316,15 @@
     "# Save the final result to a CSV file\n",
     "final_result.to_csv('final_population_comparison.csv', index=False)\n",
     "\n",
+    "# Inspect the columns of oa_gdf to identify the correct population column\n",
+    "print(\"Columns in oa_gdf after merge:\", oa_gdf.columns)\n",
+    "\n",
+    "# Save the included OAs to a CSV file using the correct column names\n",
+    "included_oas = oa_gdf[oa_gdf['address_in'] / oa_gdf['total_addr'] >= optimal_threshold][['OA21CD', 'National_P', 'OA_Populat', 'pop_in_threshold']]\n",
+    "included_oas.to_csv('included_oas.csv', index=False)\n",
+    "\n",
+    "print(\"Included OAs saved to 'included_oas.csv'.\")\n",
+    "\n",
     "# Print the final result\n",
     "print(\"Final Result:\")\n",
     "print(final_result[['National park', '2021 total', 'pop_in_threshold', 'difference']])\n",
@@ -343,6 +359,37 @@
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OAs with greater than 90% population inside the boundary saved to 'oas_greater_than_90.csv'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Extract and save OAs with greater than 90% population within the boundary\n",
+    "\n",
+    "# Threshold for inclusion\n",
+    "threshold_90 = 0.90\n",
+    "\n",
+    "# Filter the OAs\n",
+    "oas_greater_than_90 = oa_gdf[oa_gdf['address_in'] / oa_gdf['total_addr'] >= threshold_90]\n",
+    "\n",
+    "# Select relevant columns\n",
+    "oas_greater_than_90_selected = oas_greater_than_90[['OA21CD', 'National_P', 'OA_Populat', 'pop_in_threshold']]\n",
+    "\n",
+    "# Save to CSV\n",
+    "oas_greater_than_90_selected.to_csv('oas_greater_than_90.csv', index=False)\n",
+    "\n",
+    "print(\"OAs with greater than 90% population inside the boundary saved to 'oas_greater_than_90.csv'.\")\n"
    ]
   }
  ],
